--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -82,3 +82,26 @@ a:hover {
     
 }
 
+.footer {
+
+
+  justify-content: center;
+ text-align: center;
+  background-color: lightgray;
+  width: 100%;
+}
+
+.footer h2 {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-size: 50px;
+  list-style: none;
+  margin: 0em;
+  padding: 0.5em;
+}
+
+.footer h1 {
+
+  font-size: 100px;
+}
